--- a/commons/src/main/resources/commerce.properties
+++ b/commons/src/main/resources/commerce.properties
@@ -5,7 +5,7 @@
 
 jdbc.datasource.size=10
 
-jdbc.url=jdbc:mysql://localhost:3306/commerce?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/spark_log?useUnicode=true&characterEncoding=utf8
 jdbc.user=root
 jdbc.password=root
 
