--- a/commons/src/main/resources/commerce.properties
+++ b/commons/src/main/resources/commerce.properties
@@ -33,5 +33,5 @@ task.params.json={startDate:"2020-07-01", \
   categoryIds:"", \
   targetPageFlow:"1,2,3,4,5,6,7"}
 
-kafka.broker.list=hadoop-senior01.itguigu.com:9092
+kafka.broker.list=192.168.199.100:9092
 kafka.topics=AdRealTimeLog
