--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <properties>
         <spark.version>2.1.1</spark.version>
         <scala.version>2.11.8</scala.version>
+        <spark.scala.version>2.11</spark.scala.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.22</slf4j.version>
     </properties>
@@ -57,32 +58,32 @@
             <!-- 引入Spark相关的Jar包 -->
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-core_2.11</artifactId>
+                <artifactId>spark-core_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!-- provider如果存在，那么运行时该Jar包不存在，也不会打包到最终的发布版本中，只是编译器有效 -->
                 <!--<scope>provided</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-sql_2.11</artifactId>
+                <artifactId>spark-sql_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-streaming_2.11</artifactId>
+                <artifactId>spark-streaming_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-mllib_2.11</artifactId>
+                <artifactId>spark-mllib_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-graphx_2.11</artifactId>
+                <artifactId>spark-graphx_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
@@ -94,7 +95,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.spark</groupId>
-                <artifactId>spark-hive_2.11</artifactId>
+                <artifactId>spark-hive_${spark.scala.version}</artifactId>
                 <version>${spark.version}</version>
                 <!--<scope>provided</scope>-->
             </dependency>
